# gf-summerschool-2025

./: .gitignore  README.md
day-01/: First.gf  FirstEng.gf  FirstSwe.gf  README.md  first.cf
day-02/: ExtMicroLang.gf  ExtMicroLangEng.gf  MicroLang.gf  MicroLangEng.gf  MicroResEng.gf
day-03/: AppEng.gf  README.md
day-03/jobs-grammar-for-ranim/: App.gf  AppAPIAr.gf  README.md
day-03/mini-app-for-mads/: App.hs  Mini.gf  MiniEng.gf  README.md  app.cabal
day-04/: README.md
day-04/cgi/: LangCgi.gf  LangCgiEng.gf  LangCgiExt.gf  LangCgiExtEng.gf  LexiconCgi.gf  LexiconCgiEng.gf  LexiconCgiExt.gf  LexiconCgiExtEng.gf  README.md
day-05/: README.md
day-05/job/: App.gf  AppAPIEng.gf  AppAPIGer.gf  AppGenderedGer.gf  AppI.gf  AppIEng.gf  AppIFin.gf  AppIGer.gf
day-05/python/: DrawIta.gf  QueryEng2.gf  draw.py  minitranslator.py
day-07/rgl-transfer/: Makefile  Transfer.hs
