cabal-version:       3.6
name:                mini-app
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD-3-Clause
author:              Aarne Ranta
maintainer:          aarne.ranta@gmail.com
category:            Development
build-type:          Simple


executable mini
  main-is:             App.hs
  other-modules:
    Mini
  hs-source-dirs:      .
  ghc-options:         -O2
  build-depends:       base >=4.18 && <5,
                       containers,
                       mtl,
                       array,
                       gf >= 3.12
  default-language:    Haskell2010